pxc/tests/test_097_mapped_defcon/defcon1.px
public namespace defcon1;
import common -;

struct foo(int x) { /* not defcon */
  int v = x;
}

{
  tree_map{int, foo} m;
  m.insert(3, foo(5));
  println(m);
  m[3] = foo(5); // error: foo is not defcon
}
